# Async_API_sprint_1

./: .gitignore  Makefile  README.md  docker-compose.local.yml  docker-compose.yml  pyproject.toml  requirements.txt  ruff.toml
app/: .env.example
app/movies/: Dockerfile
app/movies/requirements/: base.txt  local.txt
app/movies/src/: main.py
apps/: .env.example
apps/configs/: site.conf
apps/etl/: .dockerignore  .env.example  Dockerfile  Readme.md  dump.sql  enricher.py  loader.py  logger.py  main.py  merger.py  models.py  producer.py  requirements.txt  settings.py  state.py  transformer.py  utils.py
apps/etl/indices/: genre.py  movie.py  person.py
apps/movies/: Dockerfile  Makefile  README.md  local_up.sh  main.py
apps/movies/api/: __init__.py  deps.py
apps/movies/db/: postgresql.py
apps/movies/models/: __init__.py  film.py  genre.py  person.py
apps/movies/requirements/: base.txt  local.txt
apps/movies/schemas/: __init__.py  base.py  film.py  genre.py  person.py
apps/movies/services/: base.py  deps.py  film.py  genre.py  person.py
apps/movies/settings/: api.py  base.py  elastic.py  redis.py
apps/movies/tests/: curl_tests.sh
configs/: site.conf
src/: .env.example  main.py
src/alembic/: env.py
src/api/v1/: films.py
src/app/: Dockerfile  requirements.txt
src/app/api/: deps.py
src/app/db/: postgresql.py
src/app/scripts/: entrypoint.sh
src/app/settings/: base.py  redis.py  (+3 more)
src/async_movies/: db.py  main.py
src/core/: config.py
src/db/: postgres.py
src/fastapi/: Dockerfile  main.py  pyproject.toml
src/models/: film.py
(+29 files in other folders)
