[tool.poetry]
name = "async-movies"
version = "0.1.0"
description = ""
authors = ["Швец Николай <kolya.shvets20@gmail.com>"]
readme = "README.md"
packages = [{include = "async_movies", from = "src"}]

[tool.poetry.dependencies]
python = "^3.12"
fastapi = "^0.111.0"
pydantic = "^2.7.4"
pydantic-settings = "^2.3.3"
asyncpg = "^0.29.0"
redis = "^5.0.6"
elasticsearch = {extras = ["async"], version = "^8.14.0"}
uvicorn = "^0.30.1"


[tool.poetry.group.dev.dependencies]
isort = "^5.13.2"
black = "^24.4.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
